--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
-<p>Jana Krämer
-Matrikelnummer: 260716
-</p>
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
+    <meta charset="utf-8">
+    <title>Steckbrief</title>
+    <link rel="stylesheet" type="text/CSS" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+</head>
+
+<body>
+    <p> Jana Krämer </p>
+    <p> Marikelnummer: 260716</p>
+    <p>Studiengang:MKB</p>
+    <p> Gruppe gelb</p>
+</body>
+
+</html>
