--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <p> Marikelnummer: 260716</p>
     <p>Studiengang:MKB</p>
     <p> Gruppe gelb</p>
+    <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief"></a>
+    <a href="file:///C:/EIA2/JanaKraemer/index.html"></a>
 </body>
 
 </html>
