--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <p> Gruppe gelb</p>
     <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief"></a>
     <a href="file:///C:/EIA2/JanaKraemer/index.html"></a>
+    <a href="file:///C:/EIA2/EIA2-Aufgabe/index.html"></a>
 </body>
 
 </html>
