--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <p> Marikelnummer: 260716</p>
     <p>Studiengang:MKB</p>
     <p> Gruppe gelb</p>
-    <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief"></a>
-    <a href="file:///C:/EIA2/JanaKraemer/index.html"></a>
-    <a href="file:///C:/EIA2/EIA2-Aufgabe/index.html"></a>
+    <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Github</a>
+    <a href="file:///C:/EIA2/JanaKraemer/index.html">Steckbrief</a>
+    <a href="file:///C:/EIA2/EIA2-Aufgabe/index.html">Aufgabe0</a>
 </body>
 
 </html>
