--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Studiengang:MKB</p>
     <p> Gruppe gelb</p>
     <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Repository</a>
-    <a href="file:///C:/EIA2/JanaKraemer/index.html">Steckbrief</a>
+    <a href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
     <a href="file:///C:/EIA2/EIA2-Aufgabe/index.html">Aufgabe0</a>
 </body>
 
