--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p> Gruppe gelb</p>
     <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Repository</a>
     <a href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
-    <a href="file:///C:/EIA2/EIA2-Aufgabe/index.html">Aufgabe0</a>
+    <a href="https://github.com/JanaKraemer/EIA2-Aufgabe">Aufgabe0</a>
 </body>
 
 </html>
