--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <h1>EIA 2 Praktikum</h1>
     <p> Jana Krämer </p>
     <p> Marikelnummer: 260716</p>
     <p>Studiengang:MKB</p>
