--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -6,6 +6,10 @@
 -->
 <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 <hr>
-Vorkenntnisse: HTML, CSS, TypeScript
+
+
+<a target="_blank" href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Repository</a>
+<a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Aufgabe0</a>
 </body>
 </html>
