--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <p> Marikelnummer: 260716</p>
     <p>Studiengang:MKB</p>
     <p> Gruppe gelb</p>
-    <a href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Repository</a>
-    <a href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
-    <a href="https://github.com/JanaKraemer/EIA2-Aufgabe">Aufgabe0</a>
+    <a target="_blank" href="https://github.com/JanaKraemer/JanaKraemer/tree/master/Steckbrief">Repository</a>
+    <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
+    <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Aufgabe0</a>
 </body>
 
 </html>
