Anmerkung  Verlinkung der Aufgabe

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
     <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository Abgabe 31.03.19</a>
     <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Kopie%20von%20EIA.pdf">Link Boxes</a>
+    <p>Die aktuelle Aufgabe befindet sich verlinkt im Steckbrief, sowie im Repository</p>
 
     <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
     <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
     <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/index.html">Aufgabe0</a>
+
 </body>
 
 </html>
