--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
     <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
     <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/index.html">Aufgabe0</a>
+    <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Dok1.pdf">Mau Mau Diagramme</a>
+
+
 
 </body>
 
