--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,5 +11,11 @@
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/index.html">Aufgabe0</a>
+
+
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository Abgabe 31.03.19</a>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Kopie%20von%20EIA.pdf">Link Boxes</a>
+
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Dok1.pdf">Mau Mau Diagramme</a>
 </body>
 </html>
