--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,7 +7,7 @@
 <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 <hr>
 
-
+<p>Die Aufgaben sind in Zusammenarbeit mit Regine, Felix Kölle und Hannes entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/index.html">Aufgabe0</a>
