--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,13 +9,13 @@
 
 <p>Die Aufgaben sind in Zusammenarbeit mit Regine, Felix Kölle und Hannes entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
+<br>
 <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
+<br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/index.html">Aufgabe0</a>
-
-
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository Abgabe 31.03.19</a>
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Kopie%20von%20EIA.pdf">Link Boxes</a>
-
+<br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Boxes</a>
+<br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Dok1.pdf">Mau Mau Diagramme</a>
 </body>
 </html>
