aufgabe in steckbrief verlinken

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,7 +7,11 @@
 <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
 <hr>
 
-<p>Die Aufgaben sind in Zusammenarbeit mit Regine, Felix Kölle und Hannes entstanden</p>
+<p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
+<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/maumau/">Mau-Mau Spiel</a>
+<br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Dok1.pdf">Mau Mau Diagramme</a>
+<br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
 <a target="_blank" href="https://janakraemer.github.io/JanaKraemer/">Steckbrief</a>
@@ -16,6 +20,6 @@
 <br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Boxes</a>
 <br>
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Dok1.pdf">Mau Mau Diagramme</a>
+
 </body>
 </html>
