--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -8,14 +8,18 @@
 <hr>
 
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eisdealer/AD.pdf">AD Eisdealer</a>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
+<br>
+<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eisdealer/">Eisdealer</a>
+<br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eisdealer/AD%20erweiterung.pdf">AD Eisdealer Erweiterung</a>
+
 <br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/maumau%20interaktiv/">Mau Mau Events </a>
 
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/maumau%20interaktiv/AD%20erweiterung.pdf">AD Erweiterung</a>
 <br>
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
-<br>
+
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/tree/master/maumau%20interaktiv">Mau-Mau AD Interaktiv</a>
 
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/maumau/">Mau-Mau Spiel</a>
