--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,9 @@
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_assoziativ/Dok1.pdf">Konzept</a>
+<br>
+
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eisdealer/">Eisdealer</a>
 <br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eisdealer/AD%20erweiterung.pdf">AD Eisdealer Erweiterung</a>
