--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,7 +12,7 @@
 <br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eis_assoziativ/">Aufgabe 5</a>
 <br>
-<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_assoziativ/Dok1.pdf">Konzept A5</a>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_assoziativ/AD%20neu.pdf">Konzept A5</a>
 <br>
 
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eisdealer/">Eisdealer</a>
