--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,8 @@
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_assoziativ/Skizze%20Response.pdf">Skizze Response</a>
+<br>
 <a target="_blank" href="https://kraemerj.herokuapp.com/Hello">Herokuapp</a>
 <br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eis_assoziativ/">Server Aufgabe</a>
