server.ts verlinkung

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,7 +11,9 @@
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/eis_response/">Eis Server Response</a>
+
 <br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_response/Server.ts">Server.ts</a>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/eis_response/Skizze%20Response%202.pdf">Skizze +AD Response</a>
 <br>
 <a target="_blank" href="https://kraemerj.herokuapp.com/Hello">Herokuapp</a>
