--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,7 +10,7 @@
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
-<a target="_blank" href="https://mongodbnetbrowser.herokuapp.com/?u=Jana&p=kraemer99.&a=cluster0-qwseq.mongodb.net/&n=sch%C3%BCler&c=students">Mongo</a>
+<a target="_blank" href="https://mongodbnetbrowser.herokuapp.com/?u=Jana&p=kraemer99.&a=cluster0-qwseq.mongodb.net&n=sch%C3%BCler&c=students">Mongo</a>
 <br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Datenbank/ad.pdf">Domänenübergreifendes Aktivitätsdiagramm</a>
 <br>
