--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,7 +9,10 @@
 
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
-
+<br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Aquarium/skizzen.pdf">Skizze Aquarium</a>
+<br>
+<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Aquarium/">Aquarium</a>
 <br>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/DatenAntwort/">Aufgabe Matrikelnummer</a>
 <br>
