--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,6 +10,7 @@
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
 <br>
+<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe/">Abschlussaufgabe</a>
 
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Aquarium/ad%20polynometrie.pdf">AD Polymorphie</a>
 <br>
