--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,7 +9,9 @@
 
 <p>Die Aufgaben sind in Zusammenarbeit mit Regina Faller, Felix Kölle und Hannes Schwabe entstanden</p>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe">Repository</a>
+
 <br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe/Abschlussaufgabe%20Konzept.pdf">Konzept Abschlussaufgabe</a>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe/">Abschlussaufgabe</a>
 
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Aquarium/ad%20polynometrie.pdf">AD Polymorphie</a>
