--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,7 @@
 <br>
 <a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe/Abschlussaufgabe%20Konzept.pdf">Konzept Abschlussaufgabe</a>
 <br>
+<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe.zip">Zip Datei Abschlussaufgabe</a>
 <a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe/">Abschlussaufgabe</a>
 <br>
 
