--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,6 +13,7 @@ body {
 </head>
 <body>
 	<p>Jana Krämer</p>
-	<p>MKB 4</p><!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<p>MKB 4</p>
+	<p>Nur für die Abschlussaufgabe hier im Kurs</p><!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
