--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,13 +7,15 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeee
+	
 }
 </style>
 </head>
 <body>
 	<p>Jana Krämer</p>
 	<p>MKB 4</p>
-	<p>Nur für die Abschlussaufgabe hier im Kurs</p><!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<p>Nur für die Abschlussaufgabe hier im Kurs</p>
+	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/tree/master/Abschlussaufgabe2">Repository</a>
+	<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe2/index.html">Abschlussaufgabe</a>
 </body>
 </html>
