--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,5 +17,6 @@ body {
 	<p>Nur für die Abschlussaufgabe hier im Kurs</p>
 	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/tree/master/Abschlussaufgabe2">Repository</a>
 	<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe2/index.html">Abschlussaufgabe</a>
+	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe2/konzept.pdf"> Konzept</a>
 </body>
 </html>
