--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -16,8 +16,9 @@ body {
 	<p>MKB 4</p>
 	<p>Nur für die Abschlussaufgabe hier im Kurs</p>
 	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/tree/master/Abschlussaufgabe2">Repository</a>
+	
 	<a target="_blank" href="https://janakraemer.github.io/EIA2-Aufgabe/Abschlussaufgabe2/index.html">Abschlussaufgabe</a>
 	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe2/konzeptendabgabe.pdf"> Konzept</a>
-	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe2.zip> Konzept">Zip-Datei</a>
+	<a target="_blank" href="https://github.com/JanaKraemer/EIA2-Aufgabe/blob/master/Abschlussaufgabe2.zip">Zip-Datei</a>
 </body>
 </html>
